--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,12 @@
     <groupId>com.noomtech</groupId>
     <artifactId>hoogas</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <packaging>pom</packaging>
+    <modules>
+        <module>HoogasServer</module>
+        <module>HoogasShared</module>
+        <module>HoogasClient</module>
+    </modules>
 
     <properties>
         <maven.compiler.source>22</maven.compiler.source>
@@ -15,12 +21,6 @@
     </properties>
 
     <dependencies>
-
-        <dependency>
-            <groupId>com.noomtech</groupId>
-            <artifactId>hoogas_shared</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
 
         <dependency>
             <groupId>commons-io</groupId>
